# EqualizerApp

./: .gitignore  ArchitectureReport.md  ArchitectureSummary.md  BuildInfo.txt  ProjectTree.txt  README.md  REALTIME_SAFETY.md  SI001_AUDIBLE_PATH_BEFORE.txt  SI001_CHANGED_FILES.txt  SI001_CP1_DIFF_STAT.txt  SI001_CP1_GIT_ROOT.txt  SI001_CP1_GIT_STATUS.txt  SI001_CP1_HEAD.txt  SI001_CP1_NAME_STATUS.txt  SI001_DEVICE_VALIDATION_PLAN.txt  SI001_EQ_MATH_AUDIT.txt  SI001_EQ_SEMANTIC_MAP.txt  SI001_GAIN_BUDGET.txt  SI001_GIT_DIFF.txt  SI001_GRAPH_RESPONSE_BEFORE.txt  SI001_HARD_GATES.txt  SI001_PRESTATE.txt  SI001_TEST_RESULTS.txt  StaticReview.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  AudioGraph.h  AudioTap.h  Biquad.cpp  Biquad.h  CMakeLists.txt  CrossfeedModule.h  DSPModule.h  DSPPipeline.cpp  DSPPipeline.h  ExecutionPlan.cpp  ExecutionPlan.h  FrequencyResponseAnalyzer.cpp  FrequencyResponseAnalyzer.h  GraphCompiler.cpp  GraphCompiler.h  GraphExecutor.h  HighPassModule.h  ModuleRegistry.h  NodeId.h  OutputGainModule.h  ParameterEvent.h  ParameterID.h  ParameterManager.h  ParameterQueue.h  ParameterSmoother.h  ParameterValue.h  ParametricEQModule.h  PreampModule.h  ProcessContext.h  ProcessSpec.h  SpatializerModule.h  StereoWidthModule.h  native-lib.cpp
app/src/main/cpp/tests/: GraphTests.h  ResponseTests.h  TestRunner.cpp
docs/architecture/: ADR_RP001.md  RP001_OVERVIEW.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+24 files in other folders)
